ontol/ontol-compiler/test-cases/error/rel/mix_of_index_and_edge_types.on
def foo ()
def bar ()

rel {foo} 0[rel* is: bar]: text // ERROR cannot mix index relation identifiers and edge types
